--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "express": "3.0.3",
     "jade": "*",
     "restler": "*",
-    "oauth": "*"
+    "oauth": "*",
+    "connect-flash": "*"
   }
 }
