--- a/package.json
+++ b/package.json
@@ -2,8 +2,9 @@
   "name": "EMERTYY",
   "version": "0.0.1",
   "private": true,
-  "scripts": {
-    "start": "node app"
+  "engines": {
+    "node": "0.8.x",
+    "npm": "1.2.x"
   },
   "dependencies": {
     "express": "3.0.3",
